src/test/resources/templates/valid/template2.kool
object Program4 {
  def/**/main () : Unit = {
    println(new Test2().lol());
  }
}

class B {
  var c: Test<String, String>;
  var b: Test<Int, Int>;


  Def yo(): Int = {
    var lol: Test3<B>;
    c = new Test<String, String>();
    b = new Test<Int, Int>();
    lol = new Test3<B>();
    println(lol.test());
    println(b.calc(1, 1));
    println(c.calc("1", "1"));
    return 0;
  }
}

class Test3<T> {
  var a: Test<Int, Int>;
  Def test(): Int = {
    a = new Test<Int, Int>();
    return a.calc(1, 2);
  }
}

class Test<T1, T2> {
  var a: T2;
  
  Def calc(a: T1, b: T2) : T1 = {
    return a + b;
  }
}

class Test2 extends Test<String, Int> {
  Def lol(): String = {
    a = 1;
    return this.calc("1", a);
  }
}


