src/test/resources/templates/invalid/too-many-template-args.kool
object Program4 {
  def/**/main () : Unit = {
    println(new Test<Int, String, String>());
  }
}

class Test<T1, T2> { }

    